# finanalysis

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/implementation/: metrics-calculator-complete.md
docs/plans/: 2026-03-13-pdf-pipeline-design.md  2026-03-13-pdf-pipeline-implementation.md  2026-03-14-benchmark-improvement-plan.md  2026-03-14-metrics-calculator-plan.md
docs/superpowers/plans/: 2026-03-15-financial-skill-quality-improvements.md  2026-03-16-financial-skill-v2-dynamic-architecture.md
docs/superpowers/specs/: 2026-03-15-financial-skill-quality-improvements-design.md  2026-03-16-financial-skill-v2-dynamic-architecture-design.md
scripts/: benchmark.py
skills/financial-analysis-report/: BUGFIXES-2026-03-15.md  CHANGES.md  DATA_ACCURACY_IMPROVEMENTS.md  DATA_ACCURACY_SUMMARY.md  FIX_SUMMARY.md  HARDCODED_DATA_REMOVAL.md  HYBRID_EXTRACTION_MIGRATION.md  SKILL.md
skills/financial-analysis-report/evals/: evals.json
skills/financial-analysis-report/references/: canonical_data_registry.md  data_catalog.md  data_format.md  manual_workflow.md  output_format_specification.md  precision_quick_reference.md  quick_start_examples.md  tone_guidelines.md  troubleshooting.md  worker_1_context_setup.md  worker_2_core_performance.md  worker_3_business_analysis.md  worker_4_operational_health.md  worker_4_profitability_health.md  worker_5_profitability_growth.md  worker_5_risk.md  worker_6_cashflow_outlook.md  worker_6_risk_cashflow.md  worker_6b_cashflow_forecast.md  worker_7_summary.md  writing_guidelines.md  writing_standards.md
skills/financial-analysis-report/scripts/: assemble_report.py  data_extractor.py  example_worker_extraction.py  extract_worker_bundle.py  financial_calculator.py  generate_report.py  generate_summary.py  prepare_workspace.py  report_generator.py  report_generator_enhanced.py  validate_report.py
skills/financial-analysis-report/tests/: test_validate_report.py
src/finanalysis/: __init__.py  cache.py  cli.py  compare.py  config.py  fs_index.py  pipeline.py  qa.py  report_index.py  retrieval.py
src/finanalysis/calculators/: __init__.py  metrics.py
src/finanalysis/extractors/: __init__.py  pdf_utils.py  table_extractor.py  text_extractor.py
src/finanalysis/llm/: client.py
src/finanalysis/models/: __init__.py  content.py  document.py  metrics.py
testdata/: chin_hin_questions_50_基础指标_标准问法.csv
tests/e2e/: test_e2e_pipeline.py
tests/integration/: test_pipeline_stage4.py  test_pipeline_stage5.py  test_stage1.py  test_stage2.py  test_stage3.py
tests/unit/: test_cache.py  test_cli.py  test_compare.py  test_config.py  test_pipeline.py  test_report_index.py  test_retrieval.py
(+21 files in other folders)
